statum-macros/tests/ui/invalid_validators_alias_wrong_payload.stderr
error: Error: validator `is_in_progress` for `impl DbRow` rebuilding `TaskMachine` state `TaskState::InProgress` must return `Result<Progress, _>` or `Validation<Progress>` (or an equivalent supported alias), but found `statum :: Result < () >` with payload `()`.
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:46:33
   |
46 |     fn is_in_progress(&self) -> statum::Result<()> {
   |                                 ^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:54:2
   |
54 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_alias_wrong_payload.rs`
